tests/macro_tests/tests/fail/multer_with_no_exists.stderr
error[E0425]: cannot find function `not_exists` in this scope
 --> tests/fail/multer_with_no_exists.rs:3:10
  |
3 | #[derive(FromMultipart)]
  |          ^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `FromMultipart` (in Nightly builds, run with -Z macro-backtrace for more info)
